--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<section>
 		<h1>Primera Fase</h1>
         <h3>Proyecto de sitio Web año 2022</h3>
-        <p>Ir a <a href="fase2/design.html">design</a></p>
+        <p>Ir a <a href="./fase2/design.html">design</a></p>
         <h3>Datos</h3>
         <p>
             <b>Nombre: </b>Samir Mendoza<br>
