--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<title>Proyecto DWS fase 1</title>
+    <meta charset="utf-8">
+    <title>Proyecto DWS fase 1</title>
 </head>
+
 <body>
-	<section>
-		<h1>Primera Fase</h1>
+    <section>
+        <h1>Primera Fase</h1>
         <h3>Proyecto de sitio Web año 2022</h3>
         <p>Ir a <a href="./fase2/design.html">design</a></p>
+        <p>Ir a <a href="./fase3/index.html">fase 3</a></p>
         <h3>Datos</h3>
         <p>
             <b>Nombre: </b>Samir Mendoza<br>
@@ -20,6 +23,7 @@
                 <li><b>Telefono: </b> 3204483819</li>
             </lu>
         </p>
-	</section>
+    </section>
 </body>
+
 </html>
