fix img recurso 2

--- a/fase3/etiquetas_y_atributos.html
+++ b/fase3/etiquetas_y_atributos.html
@@ -42,23 +42,23 @@
             <article>
                 <h2>Etiquetas y atributos</h2>
                 <p>En HTML las etiquetas se escriben con el siguiente formato:<br>
-                    <img src="img\tema2_1.PNG" class="img_article"> <br>
+                    <img src="img\tema2_1.png" class="img_article"> <br>
                 </p>
                 <p>La etiqueta aquí representada se llama marca y vemos que la etiqueta de comienzo y la etiqueta de cierre se distinguen en que la de cierre comienza por una barra inclinada (/). En HTML hay muchas etiquetas emparejadas como estas:
-                    <img src="img\tema2_2.PNG" class="img_article"> <br>
+                    <img src="img\tema2_2.png" class="img_article"> <br>
                 </p>
                 <p>Pero HTML también permite tener algunas sin emparejar. Estas etiquetas terminan con una barra inclinada:
-                    <img src="img\tema2_3.PNG" class="img_article"> <br>
+                    <img src="img\tema2_3.png" class="img_article"> <br>
                 </p>
                 <p>Incluso hay etiquetas que no necesitan una etiqueta de cierre: <br>
-                    <img src="img\tema2_4.PNG" class="img_article"> <br>
+                    <img src="img\tema2_4.png" class="img_article"> <br>
                 </p>
                 <p>En HTML las etiquetas se pueden escribir en mayúsculas o minúsculas, indistintamente. El bloque contenido entre una etiqueta de inicio y otra de cierre (o. una etiqueta sin emparejar) lo llamaremos <b>elemento</b>. Veremos que lo normal
                     es que unos elementos estén contenidos dentro de otros elementos, De esta forma daremos estructura al documento.
                 </p>
                 <p>Un elemento puede tener una etiqueta con atributos, Un atributo especifica algunas características singulares de un elemento o información adicional. Los atributos se especifican como pares atributo="valor", separados por espacios dentro
                     de la etiqueta de inicio: <br>
-                    <img src="img\tema2_5.PNG" class="img_article"> <br>
+                    <img src="img\tema2_5.png" class="img_article"> <br>
                 </p>
                 <p>En HTML no es obligatorio que el valor vaya entre comillas, pero sí recomendado. Se usan en muchos elementos.
                 </p>
