--- a/fase3/actividad2.html
+++ b/fase3/actividad2.html
@@ -42,7 +42,7 @@
             <article id="section-proposito">
                 <h2>Propósito del sitio</h2>
                 <p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Pwl3zD-D5ck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    En construccion
                 </p>
             </article>
         </section>
