--- a/fase4/autor.html
+++ b/fase4/autor.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Proyecto DWS fase 3</title>
+    <title>Proyecto DWS fase 4</title>
     <link rel="stylesheet" href="css/estilo.css">
 
 </head>
@@ -31,7 +31,7 @@
             <li><a href="#">Aprendizaje</a>
                 <ul>
                     <li><a href="./actividad1.html">Actividad 1</a></li>
-                    <li><a href="./actividad2.html">Actividad 2</a></li>
+                    <li><a href="./actividad1.html">Actividad 2</a></li>
                 </ul>
             </li>
             <li><a href="./autor.html">Autor</a></li>
@@ -40,9 +40,15 @@
     <main>
         <section>
             <article id="section-proposito">
-                <h2>Propósito del sitio</h2>
-                <p>
-                    en construccion
+                <h2>Autor del sitio</h2>
+                <p><img src="img\autor.jpg" width="300px">
+                    <ul>
+                        <li><b>Nombre:</b> Samir Mendoza</li>
+                        <li><b>Codigo:</b> 1090480402</li>
+                        <li><b>Programa:</b> Ingenieria de sistemas</li>
+                        <li><b>Correo Electrónico:</b> samirrhusein@gmail.com</li>
+                        <li><b>Usuario Skype:</b> zayrus2</li>
+                    </ul>
                 </p>
             </article>
         </section>
@@ -52,7 +58,7 @@
         </aside>
     </main>
     <footer id="main-footer">
-        <p class="footer">Autor: Samir Mendoza<br>Correo: samirrhusein@gmail.com<br>Skype: sa-ra-me@hotmail.com<br>Fecha: 15/03/2022
+        <p class="footer">Autor: Samir Mendoza<br>Correo: samirrhusein@gmail.com<br>Skype: sa-ra-me@hotmail.com<br>Fecha: 14/12/2022
         </p>
 
     </footer>
