--- a/fase4/recurso2.html
+++ b/fase4/recurso2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Proyecto DWS fase 3</title>
+    <title>Proyecto DWS fase 4</title>
     <link rel="stylesheet" href="css/estilo.css">
 
 </head>
@@ -31,7 +31,7 @@
             <li><a href="#">Aprendizaje</a>
                 <ul>
                     <li><a href="./actividad1.html">Actividad 1</a></li>
-                    <li><a href="./actividad2.html">Actividad 2</a></li>
+                    <li><a href="./actividad1.html">Actividad 2</a></li>
                 </ul>
             </li>
             <li><a href="./autor.html">Autor</a></li>
@@ -40,9 +40,9 @@
     <main>
         <section>
             <article id="section-proposito">
-                <h2>Propósito del sitio</h2>
+                <h2>Como instalar plugins en VSCode</h2>
                 <p>
-                    en construccion
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Pwl3zD-D5ck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
             </article>
         </section>
