--- a/fase4/index.html
+++ b/fase4/index.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Proyecto DWS fase 3</title>
+    <title>Proyecto DWS fase 4</title>
     <link rel="stylesheet" href="css/estilo.css">
-
 </head>
 
 <body>
     <header id="main-header">
         <img src="img/css.png" alt="icon css" width="400px">
-        <h1>Aprendiendo HTML y CSS: Sintaxis y Selectores CSS</h1>
+        <h1>Etiquetas Básicas de HTML, atributos y valores</h1>
     </header>
     <nav id="menu">
         <ul class="menu">
@@ -31,7 +30,7 @@
             <li><a href="#">Aprendizaje</a>
                 <ul>
                     <li><a href="./actividad1.html">Actividad 1</a></li>
-                    <li><a href="./actividad2.html">Actividad 2</a></li>
+                    <li><a href="./actividad1.html">Actividad 2</a></li>
                 </ul>
             </li>
             <li><a href="./autor.html">Autor</a></li>
@@ -41,9 +40,17 @@
         <section>
             <article id="section-proposito">
                 <h2>Propósito del sitio</h2>
-                <p>
-                    en construccion
+                <p>En este sitio, vamos a realizar el estudio de las etiquetas basicas de HTML asi como la personalizacion de sus atributos y valores, de esta manera podremos crear una base solida para nuestra pagina web
                 </p>
+            </article>
+            <article id="article-borrador">
+                <h2>Introducción</h2>
+                <div>
+                    <p>Para escribir codigo HTML solo necesitamos un editor de texto sencillo, para el cual recomendaremos SublimeText o Visual Studio Code, nos introduciremos en el mundo del Html, CSS y todos sus principios basicos, para ello utilizaremos
+                        de referencia el libro HTML5, CSS3 y JQuery: curso práctico de Recio García, J. A. publicado en el 2016 por RA-MA Editorial al cual tendran acceso mediante el siguiente <a href="https://elibro-net.bibliotecavirtual.unad.edu.co/es/ereader/unad/106494?page=52">link</a>
+                    </p>
+                    <img src="img\aprender-html.png" width="600px">
+                </div>
             </article>
         </section>
         <aside>
@@ -52,9 +59,8 @@
         </aside>
     </main>
     <footer id="main-footer">
-        <p class="footer">Autor: Samir Mendoza<br>Correo: samirrhusein@gmail.com<br>Skype: sa-ra-me@hotmail.com<br>Fecha: 15/03/2022
+        <p class="footer">Autor: Samir Mendoza<br>Correo: samirrhusein@gmail.com<br>Skype: sa-ra-me@hotmail.com<br>Fecha: 13/12/2022
         </p>
-
     </footer>
 </body>
 
