--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h3>Proyecto de sitio Web año 2022</h3>
         <p>Ir a <a href="./fase2/design.html">design</a></p>
         <p>Ir a <a href="./fase3/index.html">fase 3</a></p>
+        <p>Ir a <a href="./fase4/index.html">fase 4</a></p>
         <h3>Datos</h3>
         <p>
             <b>Nombre: </b>Samir Mendoza<br>
